--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
     padding: 0;
 }
 body{
-    background-color: rgb(64, 20, 105);
-    color: dodgerblue
+    background-color: #2e0f23;
+    color: #94ccdb;
     
 }
 header{
